--- a/public/assets/pages/viewerpage/component_menubar.css
+++ b/public/assets/pages/viewerpage/component_menubar.css
@@ -19,7 +19,7 @@
 .component_menubar .titlebar {
     flex: 1;
     padding: 8px 0;
-    width: 100%;
+    width: 0;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
